force-app/main/default/objects/OpportunityLineItem/fields/ARR_MFC_1__c.field-meta.xml
<CustomField>
    <fullName>ARR_MFC_1__c</fullName>
    <label>ARR_MFC_1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>