force-app/main/default/objects/OpportunityLineItem/fields/ARR_MFC__c.field-meta.xml
<CustomField>
    <fullName>ARR_MFC__c</fullName>
    <formula>Sales_ARR_MFC__c  * ( 1 -  Customer_Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR (Opp Product)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>