force-app/main/default/objects/OpportunityLineItem/fields/Automation_Check__c.field-meta.xml
<CustomField>
    <fullName>Automation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automation Check</label>
    <type>Checkbox</type>
</CustomField>