force-app/main/default/objects/OpportunityLineItem/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <formula>TEXT( PricebookEntry.Product2.Business_Line__c )</formula>
    <label>Business Line</label>
    <type>Text</type>
</CustomField>