force-app/main/default/objects/OpportunityLineItem/fields/CAM_Quota_Attainment_2021__c.field-meta.xml
<CustomField>
    <fullName>CAM_Quota_Attainment_2021__c</fullName>
    <formula>IF( Close_Date__c &gt;= DATE(2021,01,01)  &amp;&amp; Close_Date__c &lt;= DATE(2021,12,31), Subscription_exception_Products__c + Sub_Products_Excluding_3_Products__c + Software_Products_Excluding_Subscription__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM Quota Attainment 2021</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>