force-app/main/default/objects/OpportunityLineItem/fields/CAM_Quota_Attainment_Override__c.field-meta.xml
<CustomField>
    <fullName>CAM_Quota_Attainment_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAM Quota Attainment Override</label>
    <type>Checkbox</type>
</CustomField>