force-app/main/default/objects/OpportunityLineItem/fields/CB_List_Price_Custom__c.field-meta.xml
<CustomField>
    <fullName>CB_List_Price_Custom__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>CB List Price</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>