force-app/main/default/objects/OpportunityLineItem/fields/chargebeeapps__Addon_Event__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Addon_Event__c</fullName>
    <label>Addon Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUBSCRIPTION_CREATION</fullName>
                <label>On subscription creation</label>
            </value>
            <value>
                <fullName>SUBSCRIPTION_TRIAL_START</fullName>
                <label>On subscription trial start</label>
            </value>
            <value>
                <fullName>PLAN_ACTIVATION</fullName>
                <label>On plan activation</label>
            </value>
            <value>
                <fullName>SUBSCRIPTION_ACTIVATION</fullName>
                <label>On subscription activation</label>
            </value>
            <value>
                <fullName>CONTRACT_TERMINATION</fullName>
                <label>On contract termination</label>
            </value>
            <value>
                <fullName>IMMEDIATELY</fullName>
                <label>Immediately</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>