force-app/main/default/objects/OpportunityLineItem/fields/chargebeeapps__Apply_Charges__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Apply_Charges__c</fullName>
    <label>Apply Charges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ONCE</fullName>
                <label>Once</label>
            </value>
            <value>
                <fullName>EVERYTIME</fullName>
                <label>Everytime this event occurs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>