force-app/main/default/objects/OpportunityLineItem/fields/chargebeeapps__Billing_Cycles__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Billing_Cycles__c</fullName>
    <label>Billing Cycles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>