force-app/main/default/objects/OpportunityLineItem/fields/chargebeeapps__CB_Item_Price__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__CB_Item_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CB Item Price</label>
    <referenceTo>chargebeeapps__CB_Item_Price__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>