force-app/main/default/objects/OpportunityLineItem/fields/chargebeeapps__Service_Period__c.field-meta.xml
<CustomField>
    <fullName>chargebeeapps__Service_Period__c</fullName>
    <label>Service Period (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>