force-app/main/default/objects/OpportunityLineItem/fields/Closed_Total__c.field-meta.xml
<CustomField>
    <fullName>Closed_Total__c</fullName>
    <formula>IF(  TEXT( Opportunity.StageName )  = &apos;Closed Won&apos;,   test_CAM__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>