force-app/main/default/objects/OpportunityLineItem/fields/Custom_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Product_Type__c</fullName>
    <label>Custom Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Custom_Product_Type</valueSetName>
    </valueSet>
</CustomField>