force-app/main/default/objects/OpportunityLineItem/fields/Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Discount__c</fullName>
    <formula>IF( Partner_Payment_Opp_Product__c == 0,  Discount , IF ( Discount = 0, Discount, IF ( Partner_Payment_OP_Bill_through__c = 0 , Discount, IF ( Partner_Payment_OP_Bill_through__c = Discount , 0,

((ListPrice *  Quantity )  - ( TotalPrice  * (1 / (1 - Partner_Payment_Opp_Product__c )))) / (ListPrice * Quantity)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>