force-app/main/default/objects/OpportunityLineItem/fields/ia_crm__Amount__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Amount__c</fullName>
    <inlineHelpText>Intacct Base flat/fixed amount. This should be equal to Quantity x Rate(Sales Price) x Multiplier - Discount.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>