force-app/main/default/objects/OpportunityLineItem/fields/ia_crm__Contract_Line_Save_Cancel_He__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Contract_Line_Save_Cancel_He__c</fullName>
    <label>Flat/Fixed Amount Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>Use billing template</fullName>
            </value>
            <value>
                <fullName>Include with every invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>