force-app/main/default/objects/OpportunityLineItem/fields/ia_crm__Do_Not_Sync__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Do_Not_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Sync</label>
    <type>Checkbox</type>
</CustomField>