force-app/main/default/objects/OpportunityLineItem/fields/ia_crm__Intacct_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Intacct_Entity_ID__c</fullName>
    <formula>IF( Opportunity.RecordType.DeveloperName = &apos;Contract&apos;, IF( ISPICKVAL( ia_crm__Intacct_Location__r.ia_crm__Entity_Type__c , &apos;Entity&apos;), ia_crm__Intacct_Location__r.ia_crm__Intacct_Entity_ID__c , &apos;&apos;), IF( ISPICKVAL( ia_crm__Intacct_Entity__r.ia_crm__Entity_Type__c , &apos;Entity&apos;), ia_crm__Intacct_Entity__r.ia_crm__Intacct_Entity_ID__c , &apos;&apos;))</formula>
    <label>Intacct Entity ID</label>
    <type>Text</type>
</CustomField>