force-app/main/default/objects/OpportunityLineItem/fields/ia_crm__Multiplier__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>