force-app/main/default/objects/OpportunityLineItem/fields/ia_crm__Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Record_Type_Name__c</fullName>
    <formula>Opportunity.RecordType.DeveloperName</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>