force-app/main/default/objects/OpportunityLineItem/fields/ia_crm__Renew__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renew</label>
    <type>Checkbox</type>
</CustomField>