force-app/main/default/objects/OpportunityLineItem/fields/ia_crm__RevenueRecognition_2_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__RevenueRecognition_2_End_Date__c</fullName>
    <label>Revenue Recognition 2 End Date</label>
    <type>Date</type>
</CustomField>