force-app/main/default/objects/OpportunityLineItem/fields/ia_crm__SFDC_Opportunity_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__SFDC_Opportunity_Product_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>SFDC Opportunity Product ID</label>
    <type>Text</type>
</CustomField>