force-app/main/default/objects/OpportunityLineItem/fields/ia_crm__Total_quantity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Total_quantity__c</fullName>
    <label>Total quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>