force-app/main/default/objects/OpportunityLineItem/fields/ia_crm__Usage_Quantity_Recurs__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Usage_Quantity_Recurs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usage Quantity Recurs</label>
    <type>Checkbox</type>
</CustomField>