force-app/main/default/objects/OpportunityLineItem/fields/Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Infrastructure__c)</formula>
    <label>Infrastructure</label>
    <type>Text</type>
</CustomField>