force-app/main/default/objects/OpportunityLineItem/fields/Licensing__c.field-meta.xml
<CustomField>
    <fullName>Licensing__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Licensing__c)</formula>
    <label>Licensing</label>
    <type>Text</type>
</CustomField>