force-app/main/default/objects/OpportunityLineItem/fields/List_Price_Total2__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Total2__c</fullName>
    <formula>List_Price_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Total2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>