force-app/main/default/objects/OpportunityLineItem/fields/List_Price_Total3__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Total3__c</fullName>
    <formula>IF(   TEXT(Product_Family__c)  = &apos;PERPETUAL_DISCOUNT&apos; || TEXT(Product_Family__c)  = &apos;DESKTOP_ENHANCEMENT&apos;,  TotalPrice ,   List_Price_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Total3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>