force-app/main/default/objects/OpportunityLineItem/fields/List_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Total__c</fullName>
    <formula>IF(   OpportunityId = &apos;0063u00000J7vhr&apos;, 0.00, ListPrice  *  Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>