force-app/main/default/objects/OpportunityLineItem/fields/Net_Amount_Opp_Product__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_Opp_Product__c</fullName>
    <formula>IF( Partner_Payment_OP_Bill_through__c &gt; 0,  TotalPrice , TotalPrice  -  Partner_Payment_OP_Direct__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount (Opp Product)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>