force-app/main/default/objects/OpportunityLineItem/fields/Net_ARR_Opp_Product__c.field-meta.xml
<CustomField>
    <fullName>Net_ARR_Opp_Product__c</fullName>
    <formula>(Sales_ARR_MFC__c  * (1  -  Customer_Discount__c )) * (1 -  Partner_Payment_Opp_Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net ARR (Opp Product)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>