force-app/main/default/objects/OpportunityLineItem/fields/No_Partner_Margin__c.field-meta.xml
<CustomField>
    <fullName>No_Partner_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Partner Margin</label>
    <type>Checkbox</type>
</CustomField>