force-app/main/default/objects/OpportunityLineItem/fields/Old_list_Price__c.field-meta.xml
<CustomField>
    <fullName>Old_list_Price__c</fullName>
    <label>Old list Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>