force-app/main/default/objects/OpportunityLineItem/fields/Old_List_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Old_List_Price_Total__c</fullName>
    <formula>PricebookEntry.Old_List_Price__c * Quantity</formula>
    <label>Old List Price Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>