force-app/main/default/objects/OpportunityLineItem/fields/Old_List_Pricev2__c.field-meta.xml
<CustomField>
    <fullName>Old_List_Pricev2__c</fullName>
    <formula>IF( TEXT(Product_Family__c) = &apos;PERPETUAL_DISCOUNT&apos; || TEXT(Product_Family__c) = &apos;DESKTOP_ENHANCEMENT&apos;, TotalPrice ,  Old_list_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old List Price_v2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>