force-app/main/default/objects/OpportunityLineItem/fields/Open_Total__c.field-meta.xml
<CustomField>
    <fullName>Open_Total__c</fullName>
    <formula>IF(Opportunity.IsClosed  &lt;&gt; True,  TotalPrice , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>